syntax = "proto3";
import "google/protobuf/empty.proto";

option go_package ="./;proto";

service Inventory{
    rpc SetInv(GoodsInvInfo) returns (google.protobuf.Empty);// 设置库存
    rpc InvDetail(GoodsInvInfo) returns (GoodsInvInfo);// 获取库存
    // 涉及到事务
    rpc Sell(SellInfo) returns(google.protobuf.Empty);// 库存扣减
    rpc Reback(SellInfo) returns(google.protobuf.Empty);// 库存归还
}

message GoodsInvInfo {
    int32 goodsId = 1; // 商品id
    int32 nums = 2; // 库存
}

message SellInfo {
   repeated GoodsInvInfo goodsInfo = 1; // 商品id
}